# Ember

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
Ember/: CMakeLists.txt
Ember/src/: Ember.h  empch.h
Ember/src/Ember/Core/: Application.cpp  Application.h  Base.h  EntryPoint.cpp  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
Ember/src/Ember/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Ember/src/Ember/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Ember/src/Ember/Platform/MacOS/: MacOSWindow.cpp  MacOSWindow.h
Ember/src/Ember/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDebugUtils.cpp  VulkanDebugUtils.h  VulkanDevice.cpp  VulkanDevice.h
Ember/src/Ember/Renderer/: GraphicsContext.h
Ember/src/Platform/MacOS/: MacOSWindow.cpp
Ember/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
Matchstick/: CMakeLists.txt
Matchstick/src/: Matchstick.cpp  main.cpp
scripts/: Build.sh  Run.sh
